[tool.poetry]
name = "fmmgen"
version = "0.2.0"
description = "Tool for generating functions to generate Cartesian multipole expansions and fast multipole and Barnes-Hut codes that use these"
authors = ["Ryan Pepper <ryan.pepper@onyxinsight.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.4"
sympy = "^1.11.1"
Cython = "^0.29.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
